--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -40,7 +40,7 @@
               <label>Budget Item</label>
             </div>
             <div class="col-sm-5">
-              <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.name" required>
+              <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="disBudgetItem.name" required>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
               <label>Budget Code</label>
             </div>
             <div class="col-sm-5">
-              <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.code" placeholder="Budget Code" required>
+              <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="disBudgetItem.code" placeholder="Budget Code" required>
             </div>
           </div>
           <div class="form-group row">
@@ -57,7 +57,7 @@
               <label>Total Budget Amount</label>
             </div>
             <div class="col-sm-5">
-              <app-amount-input [(value)]="budgetItem.totalBudget"></app-amount-input>
+              <app-amount-input [(value)]="disBudgetItem.totalBudget"></app-amount-input>
             </div>
           </div>
 
@@ -68,8 +68,8 @@
           </div>
           <div class="col-sm-5">
             <select class="form-control" name="department" #department="ngModel" [(ngModel)]="departments.department_id" required>
-              <option value="1">Select Department</option>
-              <option *ngFor="let dep of allDepartments" value=dep.code>{{dep.name}}</option>
+              <option value="1" disabled>--Select Department--</option>
+              <option *ngFor="let dep of allDepartments" value="dep.id">{{dep.name}}</option>
             </select>
           </div>
           </div>
