--- a/src/app/modules/leave/leavehistory/leavehistory.component.html
+++ b/src/app/modules/leave/leavehistory/leavehistory.component.html
@@ -2,135 +2,36 @@
 
 </ngx-componentsheader>
 
-<ngx-tableheader></ngx-tableheader>
-<ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
+<nb-card>
+  <nb-card-body>
+    <ngx-default-content
+    *ngIf="showEmpty"
+    pageHeader="No Leave History Record"
+    pageDescription=""
+    buttonValue=""
+    [loading]="loading"
+
+  >
+  </ngx-default-content>
+    <ngx-tablecomponent  
+    *ngIf="!showEmpty"
+    (filterChange)="filterUpdated($event)"
+    [showActions]="false"
+    [showFilter]="true"
+    [userData]="allleaveHistory" 
+    [tableColum]="tableColumns"
+    [totalItems]="totalItems"
+    [currentPage]="currentPage"
+    [loading]="loading"
+    >
+</ngx-tablecomponent>
 
 
 
 
-<ngx-side-modal [(show)]='showAddPlanModal' style="width: 500px;">
-    <div modal-header>Apply For Leave</div>
-    <div modal-body>
-        <form #myLeaveForm="ngForm" name="myLeaveForm">
-            <div class="form-group">
-                <label for="Title" style="font-size: small;font-weight: bold;">Employee Number:</label>
-                <ngx-employee-master-search></ngx-employee-master-search>
-                <!-- <input type="text" class="form-control" placeholder="Enter Phone Number" name="employeeNum" #employeeNum="ngModel" [(ngModel)]="leaveRequestModel.employeeID" required> -->
-                <!-- <div *ngIf="employeeNum.invalid && (employeeNum.dirty || employeeNum.touched)" class="error">
-                  <div *ngIf="employeeNum.errors.required">Employee ID is required</div>
-              </div> -->
-              </div>
+<ngx-createleave-request [showModalRequest]="showAddPlanModal"></ngx-createleave-request>
 
-            <div class="form-group">
-                <label for="Leave Year" style="font-size: small;font-weight: bold;">Leave Year:</label>
-                <!-- <input type="number" class="form-control" placeholder="Enter Leave Year" name="leaveYear" #leaveYear="ngModel" [(ngModel)]="leaveRequestModel.leaveYearID" required> -->
-                <select placeholder="Enter Leave Year" name="leaveYear" #leaveYear="ngModel" [(ngModel)]="leaveRequestModel.leaveYearID" required>
-                  <!-- <option *ngFor="let year of allLeaveYear" [value]="year"></option> -->
+<ngx-createleave-plan [showModal]="showLeavePlanModal"></ngx-createleave-plan>
 
-                </select>
-                <div *ngIf="leaveYear.invalid && (leaveYear.dirty || leaveYear.touched)" class="error">
-                  <div *ngIf="leaveYear.errors.required">Leave year is required</div>
-              </div>
-              </div>
-
-            <div class="form-group">
-                <label for="Leave Type" style="font-size: small;font-weight: bold;">Leave Type:</label>
-                <input type="number" class="form-control" placeholder="Enter Leave Type" name="leaveType" #leaveType="ngModel" [(ngModel)]="leaveRequestModel.leaveTypeID" required>
-                <div *ngIf="leaveType.invalid && (leaveType.dirty || leaveYear.touched)" class="error">
-                  <div *ngIf="leaveType.errors.required">Leave type is required</div>
-              </div>
-              </div>
-            <div class="form-group">
-                <label for="Start Date" style="font-size: small;font-weight: bold;">Start Date:</label>
-                <!-- <input type="date" class="form-control" placeholder="Enter Start Date" [min]="thisDay" name="startDate" #startDate="ngModel" [(ngModel)]="leaveRequestModel.startDate" required> -->
-                <ngx-date></ngx-date>
-                <!-- <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
-                  <div *ngIf="startDate.errors.required">Start date is required</div>
-              </div> -->
-              </div>
-            <div class="form-group">
-                <label for="Number of Days" style="font-size: small;font-weight: bold;">Number of Days:</label>
-                <input type="number" class="form-control" placeholder="Enter Number of Days" name="numDays" #numDays="ngModel" [(ngModel)]="leaveRequestModel.noOfDays" required>
-                <div *ngIf="numDays.invalid && (numDays.dirty || numDays.touched)" class="error">
-                  <div *ngIf="numDays.errors.required">Number of is required</div>
-              </div>
-              </div>
-            <div class="form-group">
-                <label for="Contact Contact-info" style="font-size: small;font-weight: bold;">Contact Info On
-                    Leave:</label>
-                <input type="number" class="form-control" placeholder="Enter Contact-info" name="leaveContact" #leaveContact="ngModel" [(ngModel)]="leaveRequestModel.contactInfoOnLeave" required>
-                <div *ngIf="leaveContact.invalid && (leaveContact.dirty || leaveContact.touched)" class="error">
-                  <div *ngIf="leaveContact.errors.required">Contact on leave is required</div>
-                </div>
-              </div>
-            <div class="form-group">
-                <label for="Contact Contact-info" style="font-size: small;font-weight: bold;">Relief Office Staff ID:</label>
-                <!-- <input type="number" class="form-control" placeholder="Enter Contact-info" name="contactInfo" #contactInfo="ngModel" [(ngModel)]="leaveRequestModel.reliefOfficerId" required> -->
-                <ngx-employee-master-search></ngx-employee-master-search>
-              </div>
-
-              <div modal-actions class="d-flex mb-5">
-                <button nbButton status="primary" class="d-flex column">Submit</button>
-                <button nbButton outline status="primary" class="d-flex column">Discard</button>
-
-            </div>
-        </form>
-    </div>
-</ngx-side-modal>
-
-
-<ngx-side-modal [(show)]='showLeavePlanModal' style="width: 500px; height: 1000px;">
-    <div modal-header>Add New Leave Plan</div>
-    <div modal-body>
-        <form #myPlanForm="ngForm" name="myPlanForm">
-            <div class="form-group">
-                <label for="Employee Name" style="font-size: small;font-weight: bold;">Employee Name:</label>
-                <!-- <input type="text" class="form-control" placeholder="Enter Employee Name" name="employeeName" #employeeName="ngModel" [(ngModel)]="leavePlanModel.employeeContractId"> -->
-                <ngx-employee-master-search></ngx-employee-master-search>
-            </div>
-
-            <div class="form-group">
-                <label for="Start Date" style="font-size: small;font-weight: bold;">Start Date:</label>
-                <!-- <input type="date" onchange="updateCalcs($event)" class="form-control" [min]="thisDay" placeholder="Enter Leave Year" name="startDate" #startDate="ngModel" [(ngModel)]="leavePlanModel.startDate" required>
-                 -->
-                 <ngx-date [max]="leavePlanModel.endDate" [(value)]="leavePlanModel.startDate"></ngx-date>
-                <!-- <div *ngIf="startDate.invalid && (startDate.dirty || startDate.touched)" class="error">
-                  <div *ngIf="startDate.errors.required">Start date is required</div>
-                </div> -->
-              </div>
-
-            <div class="form-group">
-                <label for="Number of Days" style="font-size: small;font-weight: bold;">Number of Days:</label>
-                <input type="number" (keyup)="getEndDate()" class="form-control" placeholder="Enter Number Of Days" name="numDays" #numDays="ngModel" [(ngModel)]="leavePlanModel.noOfDays" required>
-                <div *ngIf="numDays.invalid && (numDays.dirty || numDays.touched)" class="error">
-                  <div *ngIf="numDays.errors.required">Number of days is required</div>
-                </div>
-              </div>
-
-            <div class="form-group">
-                <label for="End Date" style="font-size: small;font-weight: bold;">End Date:</label>
-                <!-- <input type="number" class="form-control" [disabled] placeholder="Enter Start Date"  name="endDate" #endDate="ngModel" [(ngModel)]="leavePlanModel.endDate" required> -->
-                <ngx-date [(value)]="leavePlanModel.endDate" [min]="leavePlanModel.startDate" disabled></ngx-date>
-              </div>
-
-            <div class="form-group">
-                <label for="Comment" style="font-size: small;font-weight: bold;">Comment</label>
-                <textarea class="form-control" placeholder="Enter Comment" name="comment" #comment="ngModel" [(ngModel)]="leavePlanModel.comment"></textarea>
-            </div>
-
-            <div class="d-flex-column">
-                <nb-checkbox (checkedChange)="toggle($event)">
-                    <span>Allow rollover</span>
-                </nb-checkbox>
-            </div>
-
-            <div modal-actions class="d-flex" style="margin-top: 40px; margin-bottom: 60px;">
-              <button nbButton status="primary" [disabled]="myPlanForm.invalid" class="d-flex column">Submit</button>
-              <button nbButton outline status="primary" class="d-flex column"
-                  style="background-color: white;">Discard</button>
-          </div>
-
-        </form>
-    </div>
-    <div style="margin-top: 10px;"></div>
-</ngx-side-modal>
+  </nb-card-body>
+</nb-card>
